--- a/y2022/day1/b01_day1_rust_code_final/Cargo.toml
+++ b/y2022/day1/b01_day1_rust_code_final/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "b01_day1_rust_code"
+name = "b01_day1_rust_code_final"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lib = "0.0.0"
